2008-04-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_platform_setup.h: Fix setting the flash wait states
	when the clock is running faster than 60MHz. r0 was undefined 
	causing a data abort.
	
2007-03-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: SAM7X and SAM7XC have a CAN bus
	controller.

2007-01-17  John Eigelaar <jeigelaar@mweb.co.za>

	* include/plf_io.h
	* src/at91sam7s_misc.c
	Added code to initialise the platform ethernet hardware if need be
	 
2007-01-02  Uwe Kindler <uwe_kindler@web.de>

	* cdl/hal_arm_at91sam7s.cdl Moved HAL_PLATFORM_XXX defines and
	definition of platform header file (CYGBLD_HAL_PLATFORM_H) from
	package CYGPKG_HAL_ARM_AT91SAM7 into board specific packages.
	
2006-06-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: Implement the SPI bus 1 interface for
	the SAM7X and SAM7XC.

2006-06-01  John Eigelaar <jeigelaar@mweb.co.za>

	* include/plf_io.h: Add SPI DMA registers.

2006-05-20  John Eigelaar <jeigelaar@mweb.co.za>

	include/pkgconf/mlt_arm_at91sam7x128_rom.{h|ldi}
	include/pkgconf/mlt_arm_at91sam7x256_rom.{h|ldi}: Linker files
	for AT91SAM7X processor.
	
2006-05-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/at91sam7s_misc.c: Use the AT91 generic PIO manipulation
	macros. Move the LED function out into the board specific HAL
	package.

2006-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: 
	* include/pkgconf/mlt_arm_at91sam7s32_rom.ldi: 
	* include/pkgconf/mlt_arm_at91sam7s64_rom.ldi: 
	* include/pkgconf/mlt_arm_at91sam7s128_rom.ldi: 
	* include/pkgconf/mlt_arm_at91sam7s267_rom.ldi: 
	Allow CDL to control where in flash the image is placed.

2006-03-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: Implement the USB interface when chip
	has the device.
	
2006-03-10  Oliver Munz  <oli@snr.ch>

	* hal_arm_at91sam7s.cdl: Change the PLL-defaults so that 96MHz is
	generated so that the USB does work.
	